# policy-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  api.py  app.py  cli.py  config.yml  docker-compose.yml  docker.sh  parse_pdfs.py  pyproject.toml
app/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/public/: data.json
nbs/: 2020-10-13-semantic-search-research.ipynb  2020-10-14-run-embeddings-inference.ipynb  2021-10-04 experiment - zero-shot sentence classification.ipynb  2021-10-29-setting-search-innerproduct-threshold.ipynb  results_multi-qa-MiniLM-L6-cos-v1.csv
nbs/data_preprocessing/: 2021-10-27-add-document-metadata.ipynb
nbs/semantic_search_research/: 2020-10-13-semantic-search-research.ipynb  2020-10-14-run-embeddings-inference.ipynb  2020-10-19-larger-than-ram-arrays.ipynb  policy-segmentation.ipynb  results_msmarco-distilbert-dot-v5.csv
nbs/weak sentence classification/: 2021-10-04 cosine similarity between sentence vectors.ipynb  2021-10-04 zero-shot sentence classification.ipynb  utils.py
nbs/weak_sentence_classification/: 2021-10-04 cosine similarity between sentence vectors.ipynb  utils.py
overview_visualisation/: Dockerfile  app.js  index.html
pipeline/: document_fetcher.py  load_documents.py
policy_search/parser/: base.py  (+2 more)
schema/: cclw_instrument_mapping.csv  cclw_sector_mapping.csv  create_schema_yml.py  instruments.csv  instruments.yml  schema_helpers.py  sectors.csv  sectors.yml
scripts/: start_api.sh
temp_geographies/: geographies.csv  load_geographies_data.py
(+143 files in other folders)
