[tool.poetry]
name = "policy-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
click = "*"
pyyaml = "*"
tqdm = "*"
pymupdf = "1.18.19"
install = "*"
sortedcontainers = "*"
setuptools = "*"
wheel = "*"
spacy = "*"
boto3 = "*"
mangum = "*"
uvicorn = "*"
fastapi = "*"
elasticsearch = "*"
opensearch-py = "^1.0.0"
torch = "^1.9.1"



[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.14"
pre-commit = "2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
